--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,21 @@
 @import "tailwindcss";
+
+@theme {
+  --color-primary: #f2950a;
+  --color-secondary: #64748b;
+  --color-lightOrange: #f1dabf;
+  --color-darkGray: #1a1f25;
+  --color-lightGray: #272c35;
+
+--container-padding: 1rem;  
+  --container-sm: 2rem;
+}
+
+@layer utilities{
+    .img-shadow{
+        filter: drop-shadow(40px 50px 25px #0f1115);
+    }
+    .img-shadow2{
+        filter: drop-shadow(10px 30px 15px #3030307a);
+    }
+}
