change in location

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
 
 @theme {
   --color-primary: #f2950a;
+  --color-primarydark:#c76e00;
   --color-secondary: #64748b;
   --color-lightOrange: #f1dabf;
   --color-darkGray: #1a1f25;
