added WhereToBuy section

--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@
   --color-darkGray: #1a1f25;
   --color-lightGray: #272c35;
 
---container-padding: 1rem;  
+  --container-padding: 1000rem;  
   --container-sm: 2rem;
 }
 
@@ -18,6 +18,12 @@
     }
     .img-shadow2{
         filter: drop-shadow(10px 30px 15px #3030307a);
+    }
+    .input-style{
+      @apply px-4 py-2 border-[1px] border-gray-400 rounded-md
+    }
+    .primary-btn{
+      @apply bg-primary text-white px-4 py-2 rounded-md cursor-pointer hover:bg-primarydark duration-200
     }
 }
 
